feat(文件视图): 实现文件树和列表视图切换功能
添加文件视图模式配置选项，支持在树形和列表视图间切换
改进文件树样式和交互，优化文件列表显示效果
增强初始提交和文件差异的显示处理
修复文件内容提供者的内存泄漏问题

--- a/package.json
+++ b/package.json
@@ -66,6 +66,17 @@
           "group": "navigation"
         }
       ]
+    },
+    "configuration": {
+      "title": "GUI Git History",
+      "properties": {
+        "guigit.fileViewMode": {
+          "type": "string",
+          "enum": ["list", "tree"],
+          "default": "list",
+          "description": "Default view mode for changed files (list or tree)"
+        }
+      }
     }
   },
   "scripts": {
