--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "vscode-extension-guigit",
   "displayName": "GUI Git History",
   "description": "A visual Git history viewer with advanced commit operations",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "guigit",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mickls/vscode-extension-guigit.git"
+  },
   "engines": {
     "vscode": "^1.74.0"
   },
