chore: 更新版本号至0.0.5并优化README文档
- 将package.json和package-lock.json中的版本号从0.0.3更新至0.0.5
- 更新发布者名称从"guigit"改为"Mickls"
- 移除views配置项中的gitHistory视图
- 全面重构README文档，增加详细功能说明、使用指南和开发文档

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "vscode-extension-guigit",
   "displayName": "GUI Git History",
   "description": "A visual Git history viewer with advanced commit operations",
-  "version": "0.0.3",
-  "publisher": "guigit",
+  "version": "0.0.5",
+  "publisher": "Mickls",
   "repository": {
     "type": "git",
     "url": "https://github.com/Mickls/vscode-extension-guigit.git"
@@ -34,15 +34,6 @@
         "icon": "$(refresh)"
       }
     ],
-    "views": {
-      "explorer": [
-        {
-          "id": "guigit.gitHistory",
-          "name": "Git History",
-          "when": "gitOpenRepositoryCount != 0"
-        }
-      ]
-    },
     "viewsContainers": {
       "panel": [
         {
