feat(筛选): 添加作者筛选功能并优化用户信息获取
- 在状态管理器中添加作者筛选相关状态和方法
- 实现作者筛选下拉框UI及交互逻辑
- 优化Git用户信息获取，添加缓存机制
- 添加当前用户信息获取功能并支持筛选"me"
- 更新CSS样式支持筛选UI和状态显示

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "vscode-extension-guigit",
   "displayName": "GUI Git History",
   "description": "A visual Git history viewer with advanced commit operations",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "publisher": "Mickls",
+  "icon": "gui-git-history-high-resolution-logo-transparent.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Mickls/vscode-extension-guigit.git"
