feat: 添加Git仓库状态检查并优化视图初始化逻辑
添加对Git仓库状态的检查，当没有Git仓库时显示提示信息。优化视图初始化逻辑，将分支和提交历史的加载统一到初始化方法中。同时移除不必要的激活事件和视图条件限制。

更新版本号至0.0.8并添加展示图片到README

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-extension-guigit",
   "displayName": "GUI Git History",
   "description": "A visual Git history viewer with advanced commit operations",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "publisher": "Mickls",
   "icon": "gui-git-history-high-resolution-logo-transparent.png",
   "repository": {
@@ -15,9 +15,7 @@
   "categories": [
     "SCM Providers"
   ],
-  "activationEvents": [
-    "onStartupFinished"
-  ],
+  "activationEvents": [],
   "extensionDependencies": [
     "vscode.git"
   ],
@@ -49,8 +47,7 @@
         {
           "type": "webview",
           "id": "guigit.historyView",
-          "name": "Commit History",
-          "when": "gitOpenRepositoryCount != 0"
+          "name": "Commit History"
         }
       ]
     },
