--- a/package.json
+++ b/package.json
@@ -74,7 +74,10 @@
       "properties": {
         "guigit.fileViewMode": {
           "type": "string",
-          "enum": ["list", "tree"],
+          "enum": [
+            "list",
+            "tree"
+          ],
           "default": "list",
           "description": "Default view mode for changed files (list or tree)"
         },
@@ -102,11 +105,12 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
     "@types/node": "16.x",
+    "@types/vscode": "^1.74.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@vscode/codicons": "^0.0.38",
     "simple-git": "^3.19.1"
   }
 }
