--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-extension-guigit",
   "displayName": "GUI Git History",
   "description": "A visual Git history viewer with advanced commit operations",
-  "version": "0.0.33",
+  "version": "0.0.35",
   "publisher": "Mickls",
   "icon": "gui-git-history-high-resolution-logo-transparent.png",
   "repository": {
@@ -23,6 +23,31 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "configuration": {
+      "title": "GUI Git History",
+      "properties": {
+        "guigit.proxy.enabled": {
+          "type": "boolean",
+          "default": false,
+          "description": "Enable custom proxy configuration"
+        },
+        "guigit.proxy.http": {
+          "type": "string",
+          "default": "",
+          "description": "HTTP proxy URL (e.g., http://127.0.0.1:7890)"
+        },
+        "guigit.proxy.https": {
+          "type": "string",
+          "default": "",
+          "description": "HTTPS proxy URL (e.g., http://127.0.0.1:7890)"
+        },
+        "guigit.proxy.noProxy": {
+          "type": "string",
+          "default": "",
+          "description": "No proxy for these hosts (comma-separated)"
+        }
+      }
+    },
     "commands": [
       {
         "command": "guigit.showHistory",
