--- a/package.json
+++ b/package.json
@@ -62,6 +62,12 @@
           "type": "boolean",
           "default": true,
           "description": "Enable Git blame annotations in the editor"
+        },
+        "guigit.language": {
+          "type": "string",
+          "enum": ["auto", "en", "zh"],
+          "default": "auto",
+          "description": "Language preference for GUI Git History extension"
         }
       }
     },
@@ -145,6 +151,7 @@
   },
   "dependencies": {
     "@vscode/codicons": "^0.0.38",
-    "simple-git": "^3.19.1"
+    "simple-git": "^3.19.1",
+    "vscode-nls-i18n": "^0.2.4"
   }
 }
